- Remove `migrate_v2.py` script and associated logic for v1 to v2 schema migration. - Add `CodeTabs` React component for cleaner code tab UI in documentation. - Replace `known_for_org` with `known_for_org_name` across models, importers, and documentation for consistency. - Update links to Hugging Face Hub for dataset retrieval in documentation. - Enhance `wikidata_dump` command to support location records in addition to people and organizations. - Add IntelliJ module file for project setup.

--- a/src/app/docs/sections/database-schema.mdx
+++ b/src/app/docs/sections/database-schema.mdx
@@ -39,8 +39,8 @@ erDiagram
         text country
         int person_type_id FK
         text known_for_role
-        text known_for_org
         int known_for_org_id FK
+        int known_for_org_location_id FK
         text from_date
         text to_date
         text birth_date
@@ -138,7 +138,7 @@ The **lite database** drops all embedding tables entirely. Search is performed v
 
 <span id="usearch-indexes" />
 
-USearch provides sub-millisecond approximate nearest neighbor search on 50M+ vectors. Index files are co-located with the database:
+USearch provides rapid approximate nearest neighbor search on 50M+ vectors. Index files are co-located with the database:
 
 <table>
   <thead>
