--- a/src/app/docs/sections/server-api.mdx
+++ b/src/app/docs/sections/server-api.mdx
@@ -104,7 +104,7 @@ curl -X POST http://localhost:8222/search-people \
   </tbody>
 </table>
 
-**Response:** Array of `PersonMatch` objects with `query_name`, `record` (including `known_for_role`, `known_for_org`, `person_type`), `source`, `source_id`, `canonical_id`, and `similarity_score`.
+**Response:** Array of `PersonMatch` objects with `query_name`, `record` (including `known_for_role`, `known_for_org_name`, `person_type`), `source`, `source_id`, `canonical_id`, and `similarity_score`.
 
 #### POST /search-roles -- Search Roles
 
